# codecrafters-sqlite-c

./: .gitignore  CMakeLists.txt  README.md  download_sample_databases.sh
lib/include/cc-sqlite/: bytes.h  cell.h  file_header.h  page_header.h  record.h  varint.h
lib/src/: bytes.c  cell.c  file_header.c  page_header.c  record.c  varint.c
src/: main.c
tests/: bytes_test.c  bytes_test.h  file_header_test.c  file_header_test.h  test.c  varint_test.c  varint_test.h
